Position of pages was shifting slightly ... <https://github.com/jekyll/jekyll/issues/3441> Fixed in CSS.
 Changes to be committed:
	modified:   _sass/minima/custom-styles.scss -- html overflow-y: scroll;

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -51,3 +51,11 @@ img + em {
 .project-data h3 {
   margin-bottom: 0px;
 }
+
+/**
+ * Left-Right position change
+ * was due ot scroll bar!
+ */
+html { 
+  overflow-y: scroll; 
+}
